[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-ai-agent"
version = "1.0.0"
description = "AI agent system with dynamic tool discovery and multi-interface support"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.60.0",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "openai>=1.98.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "redis>=5.0.0",
    "slack-bolt>=1.23.0",
    # "memoryos" - Optional package, not publicly available
    "uvicorn[standard]>=0.35.0",
]
